<resources>
    <string name="app_name">Serval Maps</string>
    <string name="disclaimer_ui_lbl_about">
        Serval Maps will store geographic location information locally, and will also broadcast it over the network. \n\nBy continuing, you accept that this information will be broadcast. \n\nServal has no long term repository storage of location details. \n\nCommunications made using this software are not secure or private and data may also be witnessed by someone other than the intended recipient.
    </string>
    <string name="disclaimer_ui_btn_continue">I understand</string>
    <string name="disclaimer_ui_dialog_no_files">No map data files found. A map data file is required before continuing.</string>
    <string name="disclaimer_ui_dialog_many_files_title">Choose Map Data File</string>
    <string name="disclaimer_ui_dialog_no_serval">Serval mesh phone number was not detected, confirm Serval mesh software is installed before continuing</string>
    <string name="disclaimer_ui_dialog_no_storage">The external storage is unavailable. Serval Maps cannot start without external storage.\n\nCheck the external storage and try again.</string>
    <string name="disclaimer_ui_dialog_no_serval_mesh">The Serval Mesh software is not installed. \n\nServal Maps requires the Serval Mesh software to be installed before continuing.</string>
    <string name="disclaimer_ui_dialog_serval_not_running">The Serval Mesh is not running. Are you sure you wish to continue?</string>
    <string name="map_ui_toast_self_location">Your current location:\nLatitude: %1$f\nLongitude: %2$f</string>
    <string name="map_ui_toast_location_unavailable">Unable to centre the map at this time</string>
    <string name="peer_info_ui_lbl_heading">Peer Information</string>
    <string name="peer_info_ui_lbl_phone_number">Phone Number:</string>
    <string name="peer_info_ui_lbl_latitude">Latitude:</string>
    <string name="peer_info_ui_lbl_longitude">Longitude:</string>
    <string name="peer_info_ui_lbl_age">Information Age:</string>
    <string name="peer_info_ui_lbl_distance">Approx. Distance:</string>
    <string name="peer_info_ui_btn_call">Call Peer</string>
    <string name="peer_info_ui_btn_back">Back to Map</string>
    <string name="peer_info_ui_btn_msg">Message Peer</string>
    <string name="peer_info_toast_no_record_error">Unable to load required data at this time</string>
    <string name="new_poi_ui_lbl_heading">Add Point of Interest</string>
    <string name="new_poi_ui_lbl_latitude">Latitude</string>
    <string name="new_poi_ui_lbl_longitude">Longitude</string>
    <string name="new_poi_ui_lbl_title">Title</string>
    <string name="new_poi_ui_lbl_description">Description</string>
    <string name="new_poi_ui_lbl_characters">Characters Remaining:</string>
    <string name="new_poi_ui_lbl_tags">Tags</string>
    <string name="new_poi_ui_txt_tags_hint">Enter Tags</string>
    <string name="new_poi_ui_btn_save">Save New POI</string>
    <string name="new_poi_ui_btn_photo">Add A Photo</string>
    <string name="new_poi_ui_btn_back">Discard Changes</string>
    <string name="new_poi_ui_btn_photo_replace">Replace Photo</string>
    <string name="new_poi_toast_title_missing">A title must be provided</string>
    <string name="new_poi_toast_title_too_long">The title must be no longer than %d characters</string>
    <string name="new_poi_toast_description_missing">A description must be provided</string>
    <string name="new_poi_toast_description_too_long">The description must be no longer than %d characters</string>
    <string name="new_poi_toast_save_error">The new POI could not be saved</string>
    <string name="new_poi_toast_location_error">Unable to determine POI location, new record was not saved</string>
    <string name="new_poi_toast_latitude_missing">A latitude must be provided</string>
    <string name="new_poi_toast_longitude_missing">A longitude must be provided</string>
    <string name="new_poi_toast_no_photo">Unable to capture a photo</string>
    <string name="poi_info_ui_lbl_heading">Point of Interest</string>
    <string name="poi_info_ui_lbl_title">Title</string>
    <string name="poi_info_ui_lbl_description">Description</string>
    <string name="poi_info_ui_lbl_age">Information Age:</string>
    <string name="poi_info_ui_lbl_tags">Tags: </string>
    <string name="poi_info_toast_no_record_error">Unable to load required data at this time</string>
    <string name="poi_info_ui_lbl_distance">Approx. Distance:</string>
    <string name="poi_info_ui_btn_photo">View Photo</string>
    <string name="poi_info_ui_ui_btn_back">Back to Map</string>
    <string name="poi_into_toast_no_photo">Unable to show the photo as this time</string>
    <string name="poi_list_ui_lbl_heading">List of POIs</string>
    <string name="poi_list_ui_toast_missing_data">Unable to lookup POI information at this time</string>
    <string name="poi_list_ui_toast_missing_poi_id">Unable to lookup POI id at this time</string>
    <string name="poi_list_ui_lbl_subheading">Selected Tag: %1$s\n POI items matching this tag may be hidden as they are too old</string>
	<string name="export_ui_lbl_heading">Export Data</string>
	<string name="export_ui_lbl_format">Select Data Format</string>
	<string name="export_ui_lbl_data">Select Data to Export</string>
	<string name="export_ui_btn_export">Start Export</string>
	<string name="export_ui_progress_location">Exporting Location Records&#8230;</string>
	<string name="export_ui_progress_poi">Exporting POI Records&#8230;</string>
	<string name="export_ui_finished_msg">%1$d records exported to the "%2$s" directory in external storage</string>
    <string name="about_ui_lbl">About Serval Maps</string>
    <string name="about_ui_txt">Serval Maps is an application that supports collaborative mapping activities using a <a href="http://servalproject.org">Serval Project</a> mesh network.\n\nMap rendering is achieved using the <a href="http://mapsforge.org">mapsforge-map rendering</a> library using data sourced from <a href="http://www.openstreetmap.org">OpenStreetMap</a>. More information about OpenStreetMap licensing is <a href="http://www.openstreetmap.org/copyright">available here</a>.\n\nMore information about Serval Maps is available in the <a href="http://developer.servalproject.org/dokuwiki/doku.php?id=content:servalmaps:main_page">Serval Project Wiki</a>.</string>
    <string name="about_ui_txt_licenses">Serval Maps Copyright &#xA9; 2012 Serval Project. \n\nThis program comes with ABSOLUTELY NO WARRANTY; for details see <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a>. This is free software, and you are welcome to redistribute it under certain conditions; for details see <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a>.\n\nThe Mapsforge library is used under the terms of the <a href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser GPL</a>.\n\nOpenStreetMap data &#xA9; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA</a>.\n\nPortions of the code are sourced from the Android documentation using the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a> license.\n\nThe Apache Commons CSV library is used to support exporting data into CSV format, and is licensed using the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a> license.\n\nThe launcher and warning icons were sourced from a free icon pack from <a href="http://www.tutorial9.net/downloads/icon-pack-256x256-business-icons/">tutorial9</a>.\n\nThe binary data format used by Serval Maps is managed using <a href="https://developers.google.com/protocol-buffers/">Google Protocol Buffers</a> which is licensed using the <a href="http://code.google.com/p/protobuf/">New BSD License</a>.</string>
    <string name="about_ui_btn_stats">Statistics</string>
    <string name="about_ui_btn_licenses">Licenses</string>
    <string name="about_ui_btn_contact">Contact</string>
    <string name="about_ui_btn_about">About</string>
    <string name="about_ui_intent_chooser">Send feedback email&#8230;</string>
    <string name="about_email_subject">Feedback on Serval Maps</string>
    <string name="about_ui_lbl_version">Serval Maps Version: %1$s</string>
    <string name="about_ui_dialog_no_email">A default email client could not be found, please send any feedback you may have to %1$s</string>
    <string name="delete_ui_lbl_heading">Delete Data</string>
    <string name="delete_ui_lbl_warning">Warning Sign</string>
    <string name="stats_ui_lbl">Statistics</string>
    <string name="stats_ui_txt">Various statistics related to Serval Maps</string>
    <string name="stats_ui_lbl_version">Version Number:</string>
    <string name="stats_ui_lbl_locations">Location records:</string>
    <string name="stats_ui_lbl_pois">POI records:</string>
    <string name="stats_ui_lbl_photos">Total photos:</string>
    <string name="stats_ui_lbl_photos_by_you">Photos taken by you:</string>
    <string name="stats_ui_lbl_uptime">Core service uptime:</string>
    <string name="stats_ui_btn_send">Send to Serval</string>
    <string name="map_import_ui_lbl_heading">Import Map Data File</string>
    <string name="map_import_file_name_lbl">File Name:</string>
    <string name="map_import_file_size_lbl">File Size:</string>
    <string name="map_import_file_date_lbl">File Date:</string>
    <string name="map_import_ui_bbox_lbl_top">Top Coordinates:</string>
    <string name="map_import_ui_bbox_lbl_bottom">Bottom Coordinates:</string>
    <string name="map_import_ui_btn_import">Import</string>
    <string name="map_import_ui_btn_delete">Delete</string>
    <string name="map_import_ui_btn_close">Close</string>
    <string name="preferences_category_developer_title">Developer Settings</string>
    <string name="preferences_developer_mock_locations_title">Use Mock Locations</string>
    <string name="preferences_developer_mock_locations_summary">Use mock locations instead of real GPS data</string>
    <string name="preferences_category_map_title">Map Settings</string>
    <string name="preferences_map_follow_title">Auto Centre Map</string>
    <string name="preferences_map_follow_summary">Keep the map centred on your location</string>
    <string name="preferences_map_update_interval_title">Map Update Interval</string>
    <string name="preferences_map_update_interval_summary">Define how often the map will update</string>
    <string name="preferences_map_show_track_title">Show My Track</string>
    <string name="preferences_map_show_track_summary">Show my GPS trace as a track on the map</string>
    <string name="preferences_map_max_location_age_title">Maximum Location Age</string>
    <string name="preferences_map_max_location_age_summary">Hide Location markers when older than this setting</string>
    <string name="preferences_map_max_poi_age_title">Maximum POI Age</string>
    <string name="preferences_map_max_poi_age_summary">Hide POI markers when older than this setting</string>
    <string name="preferences_category_measurement_title">Measurement Settings</string>
    <string name="preferences_measurement_units_title">Measurement Units</string>
    <string name="preferences_measurement_units_summary">Units used to measure distances</string>
    <string name="preferences_measurement_algorithm_title">Measurement Algorithm</string>
    <string name="preferences_measurement_algorithm_summary">Algorithm used to measure distances</string>
    <string name="preferences_map_output_json_title">Output JSON Data</string>
    <string name="preferences_map_output_json_summary">Output location data as a JSON file periodically</string>
    <string name="preferences_map_output_json_interval_title">JSON Update Interval</string>
    <string name="preferences_map_output_json_interval_summary">Update JSON file with a new location every &#8230;</string>
</resources>