<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval Maps Software
 *
 * Serval Maps Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/smapsLayoutmatch"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/poi_info_ui_lbl_heading"
        style="@style/smapsHeader"
        android:text="@string/poi_info_ui_lbl_heading" />

     <TextView
         android:id="@+id/poi_info_ui_lbl_title"
         style="@style/smapsLabel"
         android:text="@string/poi_info_ui_lbl_title"/>

     <TextView
         android:id="@+id/poi_info_ui_txt_title"
         style="@style/smapsTextwrapped"/>
     
     <TextView
         android:id="@+id/poi_info_ui_lbl_description"
         style="@style/smapsLabel"
         android:text="@string/poi_info_ui_lbl_description"/>
     
     <TextView
         android:id="@+id/poi_info_ui_txt_description"
         style="@style/smapsTextwrapped"
         android:minLines="3"/>
     
     <TextView
         android:id="@+id/poi_info_ui_lbl_tags"
         style="@style/smapsLabel"
         android:text="@string/poi_info_ui_lbl_tags"/>

     <TextView
         android:id="@+id/poi_info_ui_txt_tags"
         style="@style/smapsTextwrapped"/>

     <TableLayout
         style="@style/smapsLayout" >

         <TableRow
             android:id="@+id/tableRow1"
             style="@style/smapsLayout" >
             
             <TextView
                android:id="@+id/poi_info_ui_lbl_age"
                style="@style/smapsLabel"
                android:text="@string/poi_info_ui_lbl_age" />

            <TextView
                android:id="@+id/poi_info_ui_txt_age"
                style="@style/smapsTextwrapped"
                android:text="" />
         </TableRow>

         <TableRow
             android:id="@+id/tableRow2"
             style="@style/smapsLayout" >
            
             <TextView
                android:id="@+id/poi_info_ui_lbl_distance"
                style="@style/smapsLabel"
                android:text="@string/poi_info_ui_lbl_distance" />

            <TextView
                android:id="@+id/poi_info_ui_txt_distance"
                style="@style/smapsTextwrapped"
                android:text="" />
             
         </TableRow>


     </TableLayout>
     
     <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/smapsLayout" >

     <Button
         android:id="@+id/poi_info_ui_btn_photo"
         style="@style/smapsButton"
         android:text="@string/poi_info_ui_btn_photo" />
     
     <Button
            android:id="@+id/poi_info_ui_btn_back"
            style="@style/smapsButton"
            android:text="@string/poi_info_ui_ui_btn_back" />

    </LinearLayout>

</LinearLayout>