<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval Maps Software
 *
 * Serval Maps Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    style="@style/smapsLayoutmatch" >

    <LinearLayout
        style="@style/smapsLayout"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/new_poi_ui_lbl_heading"
            style="@style/smapsHeader"
            android:text="@string/new_poi_ui_lbl_heading" />

        <TextView
            android:id="@+id/new_poi_ui_lbl_title"
            style="@style/smapsLabel"
            android:text="@string/new_poi_ui_lbl_title" />

        <EditText
            android:id="@+id/new_poi_ui_txt_title"
            style="@style/smapsInput"
            android:layout_width="match_parent"
            android:inputType="textCapWords" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/new_poi_ui_lbl_description"
            style="@style/smapsLabel"
            android:text="@string/new_poi_ui_lbl_description" />

        <EditText
            android:id="@+id/new_poi_ui_txt_description"
            style="@style/smapsInput"
            android:gravity="top"
            android:inputType="textMultiLine|textShortMessage"
            android:lines="3" >
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout1"
            style="@style/smapsLayout" >

            <TextView
                android:id="@+id/new_poi_ui_lbl_characters"
                style="@style/smapsLabel"
                android:text="@string/new_poi_ui_lbl_characters" />

            <TextView
                android:id="@+id/new_poi_ui_txt_characters"
                style="@style/smapsLabel"
                android:text=""
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_poi_ui_geocord_layout"
            style="@style/smapsLayout"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/new_poi_ui_lbl_latitude"
                style="@style/smapsLabel"
                android:text="@string/new_poi_ui_lbl_latitude" />

            <EditText
                android:id="@+id/new_poi_ui_txt_latitude"
                style="@style/smapsInput"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/new_poi_ui_lbl_longitude"
                style="@style/smapsLabel"
                android:text="@string/new_poi_ui_lbl_longitude" />

            <EditText
                android:id="@+id/new_poi_ui_txt_longitude"
                style="@style/smapsInput"
                android:inputType="numberDecimal|numberSigned" />
        </LinearLayout>

        <TextView
            android:id="@+id/new_poi_ui_lbl_tags"
            style="@style/smapsLabel"
            android:text="@string/new_poi_ui_lbl_tags" />
        
        <!--  use our custom field that can do lookups -->
		<!--
        <EditText
            android:id="@+id/new_poi_ui_txt_tags"
            style="@style/smapsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
            android:layout_marginLeft="@dimen/ui_elem_margin_left"
            android:layout_marginRight="@dimen/ui_elem_margin_right"
            android:inputType="textNoSuggestions" >
        </EditText>
        -->
        <org.servalproject.maps.tags.TagsAutoComplete
            android:id="@+id/new_poi_ui_txt_tags"
            style="@style/smapsInput"
            android:scrollbars="vertical"
            android:hint="@string/new_poi_ui_txt_tags_hint"
            android:singleLine="false">
        </org.servalproject.maps.tags.TagsAutoComplete>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/smapsLayoutmatch"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/new_poi_ui_btn_photo"
                style="@style/smapsButton"
                android:text="@string/new_poi_ui_btn_photo" />

            <Button
                android:id="@+id/new_poi_ui_btn_save"
                style="@style/smapsButton"
                android:text="@string/new_poi_ui_btn_save" />

            <Button
                android:id="@+id/new_poi_ui_btn_back"
                style="@style/smapsButton"
                android:text="@string/new_poi_ui_btn_back" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>