<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval Maps Software
 *
 * Serval Maps Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/map_import_ui_lbl_heading"
        style="@style/smapsHeader"
        android:text="@string/map_import_ui_lbl_heading" />
    
    <TableLayout
        style="@style/smapsLayout" >
        
        <TableRow
            android:id="@+id/tableRow0"
            style="@style/smapsWrap">
            
             <TextView
		        android:id="@+id/map_import_file_name_lbl"
		        style="@style/smapsLabel" 
		        android:text="@string/map_import_file_name_lbl"/>
		    
		    <TextView
		        android:id="@+id/map_import_file_name_txt"
		        style="@style/smapsTextwrapped"/>
		    
        </TableRow>
        
         <TableRow
            android:id="@+id/tableRow1"
            style="@style/smapsWrap">
            
             <TextView
		        android:id="@+id/map_import_file_size_lbl"
		        style="@style/smapsLabel" 
		        android:text="@string/map_import_file_size_lbl"/>
		    
		    <TextView
		        android:id="@+id/map_import_file_size_txt"
		        style="@style/smapsTextwrapped"/>
		    
        </TableRow>
        
         <TableRow
            android:id="@+id/tableRow2"
            style="@style/smapsWrap" >
            
            <TextView
		        android:id="@+id/map_import_file_date_lbl"
		        style="@style/smapsLabel" 
		        android:text="@string/map_import_file_date_lbl"/>
		    
		    <TextView
		        android:id="@+id/map_import_file_date_txt"
		        style="@style/smapsTextwrapped" />
		    
        </TableRow>
        
         <TableRow
            android:id="@+id/tableRow3"
            style="@style/smapsWrap" >
            
            <TextView
		        android:id="@+id/map_import_ui_bbox_lbl_top"
		        style="@style/smapsLabel" 
		        android:text="@string/map_import_ui_bbox_lbl_top"/>
            
		    <TextView
		        android:id="@+id/map_import_ui_bbox_top_txt"
		        style="@style/smapsTextwrapped" />
		    
        </TableRow>
        
         <TableRow
            android:id="@+id/tableRow4"
            style="@style/smapsWrap" >
            
            <TextView
		        android:id="@+id/map_import_ui_bbox_lbl_bottom"
		        style="@style/smapsLabel" 
		        android:text="@string/map_import_ui_bbox_lbl_bottom"/>
            
		    <TextView
		        android:id="@+id/map_import_ui_bbox_bottom_txt"
		        style="@style/smapsTextwrapped" />
		    
        </TableRow>
        
     </TableLayout>
     
    <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/smapsLayoutmatch"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/map_import_ui_btn_import"
                style="@style/smapsButton"
                android:text="@string/map_import_ui_btn_import" />

            <Button
                android:id="@+id/map_import_ui_btn_delete"
                style="@style/smapsButton"
                android:text="@string/map_import_ui_btn_delete" />

            <Button
                android:id="@+id/map_import_ui_btn_close"
                style="@style/smapsButton"
                android:text="@string/map_import_ui_btn_close" />
        </LinearLayout>

</LinearLayout>